reset styles for collapsed codemark summaries to fix https://trello.com/c/NA5V3aFG/851-markdown-causing-display-problems-on-codemarks-tab

--- a/shared/ui/styles/codemarks.less
+++ b/shared/ui/styles/codemarks.less
@@ -63,6 +63,16 @@
 				}
 			}
 		}
+		blockquote,
+		ol,
+		ul,
+		li {
+			margin: 0 !important;
+			padding: 0 !important;
+			height: auto !important;
+			display: inline;
+			white-space: normal;
+		}
 	}
 	&.blue .type-icon {
 		color: #3578ba;
